# sakila_lab_alessandro_abbate

./: .gitignore  README.md  load_sakila_sqlite_duckdb.py  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
dashboard/pages/: customer.md  film.md  index.md  overview.md  rental.md
dashboard/sources/sakila/: address.sql  category.sql  city.sql  connection.yaml  country.sql  film.sql  film_category.sql  rental.sql  store.sql
sql/: eda_pandas_duckdb.ipynb
