[project]
name = "sakila-lab-alessandro-abbate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb,sql-database]>=1.18.2",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
]
